[GRPC] Add kyo-grpc module for fiber-native gRPC support
Implements getkyo/kyo issue #390 - gRPC Support ( bounty)

This adds a new kyo-grpc module that provides fiber-native gRPC server
and client support for Kyo. Key features:

- GrpcServer: Uses Netty HTTP/2 transport with directExecutor() for
  high performance. Integrates with Kyo's fibers instead of creating
  per-request runtimes (avoiding the 5x overhead seen in zio-grpc).

- GrpcClient: NettyChannelBuilder-based client with deadline support
  and fiber integration.

- GrpcServiceDef: Traits for defining gRPC services with compile-time
  macro support for method descriptors.

- Includes helloworld.proto example and comprehensive tests.

Performance considerations:
- Uses directExecutor() to avoid thread pool overhead
- Shares scheduler across all requests (no per-request runtime)
- Avoids Try conversions and double-wrapping

Builds on JVM only (gRPC requires JVM).
Depends on grpc-netty, grpc-protobuf, grpc-stub, and netty-handler.